# BCNet

./: .gitignore  pyproject.toml
code/: infer.py
smpl_pytorch/: SMPL.py
