[tool.poetry]
name = "bcnet"
version = "0.1.0"
description = ""
authors = ["Ryuji Watanabe <ryujisan@pepabo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0, <3.13.0"
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_spline_conv-1.2.2-cp311-cp311-macosx_10_9_universal2.whl"}
torch-cluster = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_cluster-1.6.3-cp311-cp311-macosx_10_9_universal2.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_scatter-2.1.2-cp311-cp311-macosx_10_9_universal2.whl"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_sparse-0.6.18-cp311-cp311-macosx_10_9_universal2.whl"}
torch = "2.1.0"
ase = "^3.22.1"
chardet = "^5.2.0"
cycler = "^0.12.1"
decorator = "^5.1.1"
future = "^0.18.3"
googledrivedownloader = "^0.4"
h5py = "^3.10.0"
idna = "^3.4"
isodate = "^0.6.1"
joblib = "^1.3.2"
kiwisolver = "^1.4.5"
llvmlite = "^0.41.1"
matplotlib = "^3.8.1"
networkx = "^3.2.1"
numba = "^0.58.1"
opencv-python = "^4.8.1.78"
pandas = "^2.1.2"
plyfile = "^1.0.1"
pyparsing = "^3.1.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
rdflib = "^7.0.0"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
threadpoolctl = "^3.2.0"
torch-geometric = "^2.4.0"
tqdm = "^4.66.1"
urllib3 = "^2.0.7"
torchvision = "^0.16.0"
openmesh = "^1.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
